--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
       render: function(){
         return (
           React.createElement(ReactCountdownClock, {
-            seconds: this.state.seconds,
+            initsec: 300,
+            seconds: 180,
             color: this.state.color,
             paused: this.state.paused,
             pausedText: "▐▐ ",
